--- a/Webwizards/public/style.css
+++ b/Webwizards/public/style.css
@@ -44,15 +44,15 @@
 }
 
 .slide1 {
-    background-image: url("2048x1365-black-and-white-image-of-musicians-on-stage-stock-photo-freedesignfile.jpg");
+    background-image: url("rs-13565-kanye-1800-1385144890.png");
 }
 
 .slide2 {
-    background-image: url("1146457.jpg");
+    background-image: url("GettyImages-1604947670.png");
 }
 
 .slide3 {
-    background-image: url("black-and-white-2810218_1280.jpg");
+    background-image: url("jcole.png");
 }
 
 .arrow {
@@ -84,7 +84,7 @@
 }
 #leftbox {
   float: left;
-  background: #333333;
+  background: linear-gradient(red,yellow);
   width: 24%;
   height: 280px;
   border-radius: 25px;
@@ -98,7 +98,7 @@
 
 #middlebox {
   float: left;
-  background: #333333;
+  background:linear-gradient(green,blue);
   width: 24%;
   font-size: 25px;
   text-align: center;
@@ -113,7 +113,7 @@
 
 #rightbox {
   float: right;
-  background: #333333;
+  background: linear-gradient(pink,red);
   width: 24%;
   font-size: 25px;
   text-align: center;
