--- a/Webwizards/public/new.css
+++ b/Webwizards/public/new.css
@@ -1,52 +1,116 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  min-height: 100vh;
+}
+
+/* -----------------company----------------------- */
+.company {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.company-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.img {
+  width: 60%;
+  height: 20%;
+  margin: 1rem 2rem 2rem 2rem;
+}
+
+.img img {
+  width: 100%;
+  height: 50%;
+}
+
+.company-info {
+  width: 100%;
+  margin-right: 4rem;
+  margin-left: 2rem 2rem;
+}
+
+.company-info span {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.company-info span .our {
+  color: rgb(134, 85, 49);
+}
+
+.company-info p{
+  font-size: 1.1rem;
+}
+
+/* cardstyle */
+a{
+  text-decoration: none;
+}
+.container{
+  width: 95vw;
   
-  body {
-    min-height: 100vh;
-  }
-  
-  /* -----------------company----------------------- */
-  .company {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  .company-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .img {
-    width: 75%;
-    margin: 1rem 0rem 0rem 2rem;
-  }
-  
-  .img img {
-    width: 100%;
-  }
-  
-  .company-info {
-    width: 100%;
-    margin-right: 4rem;
-    margin-left: 2rem;
-  }
-  
-  .company-info span {
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-  
-  .company-info span .our {
-    color: #eebb14;
-  }
-  
-  .company-info p{
-    font-size: 1.1rem;
-  }
-  
+  padding: 2rem 1rem;
+  margin:  auto;
+  background-color: white;
+}
+.header{
+  margin-bottom: 2.5rem;
+}
+.headertittle{
+  margin-bottom: 2rem;
+  font-size:2rem;
+  font-weight: 700;
+  text-align: center;
+  line-height: 2rem;
+}
+.maincontainer{
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+.cardcontainer{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  border-radius: 2px;
+}
+.cardimagecontainer{
+  position: relative;
+  overflow: hidden;
+  height: 12rem;
+}
+.cardimage{
+  object-fit: cover;
+  object-position: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+.cardtittle_container{
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+
+
+}
+.cardcontainer:hover .cardimage{
+  transform: scale(1.1);
+  transition-duration: 200ms;
+
+}
+.cardtittle{
+  font-size: 1rem;
+  font-weight: 600;
+  color: black;
+  margin-bottom: 1rem;
+}
